--- a/game/config/events/BossEvent.properties
+++ b/game/config/events/BossEvent.properties
@@ -4,8 +4,10 @@
 # Enable/Disable KTBEvent System
 KTBEventEnabled = True
 
-# Times KTB will occur (24h format).
-KTBEventInterval = 22:07,00:15
+# Times KTB will occur (24h format, HH:mm), separated by comma.
+# NOTE: Times are interpreted using the server JVM timezone (default is America/Sao_Paulo if configured via -Duser.timezone).
+# Example: KTBEventInterval = 22:07,00:15
+KTBEventInterval = 22:15,00:15
 
 # Registration timer from start of event.
 # Model: hh:mm:ss
