--- a/game/config/npcs.properties
+++ b/game/config/npcs.properties
@@ -141,7 +141,7 @@ ConfigClassMaster = 1;[];[];2;[];[];3;[];[]
 # Artisan, Scavenger, Warsmith, Bounty Hunter, Maestro, Fortune Seeker.
 # But Warsmith will be able to change only to Maestro. 
 # Default = False
-AllowEntireTree = False
+AllowEntireTree = True
 
 # Announce to players the location of the Mammon NPCs during Seal Validation.
 # Default is False.
